# ghana.vim

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
app/: Cargo.toml
app/src/nvim/: mod.rs
autoload/: ghana.vim
autoload/ghana/: compat.vim  executor.vim  git.vim  rpc.vim  utils.vim
plugin/: ghana.vim
src/: main.rs
src/event/: issue.rs  issues.rs  mod.rs  pulls.rs
src/github/: issues.rs  mod.rs  pulls.rs
src/nvim/: mod.rs
